# subtitler

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  SKILL.md  test.srt
.github/workflows/: rust.yml
benches/: subtitler_benchmark.rs
docs/: CODE_WIKI.md  architecture-analysis-2026-07-16.md  code-review-2026-07-16.md  code-review-v2-2026-07-16.md  comprehensive-review-2026-07-16.md  ebu-stl-implementation-plan.md  format-review-2026-07-16.md  iterative-optimization-plan-2026-07-16.md  optimization-summary-2026-07-16.md  product-designs.md  subtitler-vs-editingtools-gap-analysis.md  v1-to-v2-upgrade.md  v2-api-unification.md  zero-copy-design.md
docs/promotion/: 01-release-announcement.md  02-architecture-deep-dive.md  03-practical-recipes.md  04-english-reddit-hn.md  promotion-article-1-intro.md  promotion-article-2-performance.md  promotion-article-3-real-world.md  promotion-article-4-quickstart.md  promotion-article-5-v1.3-release.md  v2.6-drop-frame-story.md  v2.6-evolution.md  v2.6-usage-guide.md  v2.6-whisper-pipeline.md  v2.6-zero-copy.md
docs/superpowers/plans/: 2026-07-15-architecture-unification.md  2026-07-15-cleanup-batch.md  2026-07-18-v2.0.1-hotfix.md  2026-07-18-v2.1-correctness-debt.md
docs/superpowers/specs/: 2026-07-15-architecture-unification-design.md  2026-07-15-cleanup-batch-design.md  2026-07-18-2.1-correctness-debt-design.md  2026-07-18-2.2-api-unification-design.md  2026-07-18-2.3-test-ci-hardening-design.md  2026-07-18-post-2.0-roadmap-design.md
examples/: README.md  create-mpl2-file.rs  create-sami-file.rs  create-srt-file.rs  create-vtt-file.rs  edit-operations.rs  example.ass  example.mpl  example.smi  example.srt  example.vtt  format-convert-all.rs  format-convert.rs  frame-conversion.rs  normalize-text.rs  parse-ass-content.rs  parse-mpl2-content.rs  parse-sami-content.rs  parse-srt-content.rs  parse-srt-file.rs  parse-srt-http.rs  parse-vtt-content.rs  parse-vtt-file.rs  parse-vtt-http.rs  quality-report.rs  stream-parse.rs  translate-subtitle.rs  ttml-lyrics-tutorial.rs  utility-ops.rs  validate-subtitle.rs
examples/parse-srt-file/: Cargo.toml
examples/parse-srt-file/src/: main.rs
examples/parse-vtt-file/: Cargo.toml
examples/parse-vtt-file/src/: error.rs  main.rs
examples/wasm/: README.md  index.html
src/: ass.rs  cli.rs  config.rs  dfxp.rs  ebu_stl.rs  encoding.rs  error.rs  io.rs  lib.rs  lrc.rs  main.rs  microdvd.rs  model.rs  mpl2.rs  normalize.rs  pipeline.rs  quality.rs  sami.rs  sbv.rs  sbv.rs.bak  scc.rs  srt.rs  subviewer.rs  ttml.rs  types.rs  utils.rs  vtt.rs  wasm.rs  whisper.rs
src/model/: builder.rs  convert.rs  format.rs  mod.rs  streaming.rs  subtitle.rs  trait.rs  types.rs  validation.rs
tests/: api_surface.rs  arch_unification.rs  cleanup_batch.rs  cli_binary_format.rs  cross_format.rs  cross_format_matrix.rs  error_assertions.rs  integration.rs  pipeline_integration.rs  proptest.proptest-regressions  proptest.rs  streaming_tests.rs  utils-test.rs
