[package]
authors = [
  "siwilizhao <siwilizhao@gmail.com>",
] 
categories = [
  "text-processing",
  "multimedia",
  "parser-implementations",
] 
description = "Subtitler is a library for parsing and generating subtitles" 
documentation = "https://docs.rs/subtitler" 
edition = "2021" 
keywords = ["subtitler", "vtt", "srt", "subtitle", "sub-title", "mankong", "siwi"] 
license = "Apache-2.0" 
name = "subtitler" 
publish = true # no accidents while in dev
readme = "README.md" 
repository = "https://github.com/subtitle-rs/subtitler" 
version = "0.0.2" 

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*", #"build.rs",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
clap = {version = "^4.0", features = ["derive"]}
regex = "^1.11"
reqwest = {version = "0.12", optional = true}
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
thiserror = "^2"
tokio = {version = "^1", features = ["full"]}
tracing = "^0.1"
tracing-subscriber = "^0.3"

[dev-dependencies]

[features]
content = []
default = ["http"]
file = []
http = ["reqwest"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[[example]]
name = "parse-srt-file"
path = "examples/parse-srt-file.rs"

[[example]]
name = "parse-srt-http"
path = "examples/parse-srt-http.rs"
required-features = ["http"]

[[example]]
name = "parse-srt-content"
path = "examples/parse-srt-content.rs"

[[example]]
name = "parse-vtt-file"
path = "examples/parse-vtt-file.rs"

[[example]]
name = "parse-vtt-http"
path = "examples/parse-vtt-http.rs"
required-features = ["http"]

[[example]]
name = "parse-vtt-content"
path = "examples/parse-vtt-content.rs"
