[package]
authors = [
  "siwilizhao <siwilizhao@gmail.com>",
] 
categories = [
  "text-processing",
  "multimedia",
  "parser-implementations",
] 
description = "Subtitler is a library for parsing and generating subtitles" 
documentation = "https://docs.rs/subtitler" 
edition = "2024" 
keywords = ["subtitler", "vtt", "srt", "subtitle", "sub-title"] 
license = "Apache-2.0" 
name = "subtitler" 
publish = true # no accidents while in dev
readme = "README.md" 
repository = "https://github.com/subtitle-rs/subtitler" 
version = "1.0.0" 

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*", #"build.rs",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.103"
chardetng = "^1.0.0"
clap = {version = "^4.6.1", features = ["derive"]}
quick-xml = {version = "^0.37", optional = true}
regex = "^1.13.0"
reqwest = {version = "0.13.4", optional = true}
serde = {version = "^1.0.228", features = ["derive"]}
serde_json = "^1.0.150"
thiserror = "^2.0.18"
tokio = {version = "^1.52.3", features = ["fs", "io-util", "rt-multi-thread", "macros"]}
tracing = "^0.1.44"
tracing-subscriber = "^0.3.23"

[dev-dependencies]
criterion = "0.8.2"

[features]
default = ["srt", "vtt", "ass", "ssa", "microdvd", "subviewer", "ttml", "sbv", "lrc", "http"]

srt = []
vtt = []
ass = []
ssa = []
microdvd = []
subviewer = []
ttml = ["quick-xml"]
sbv = []
lrc = []
http = ["reqwest"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[example]]
name = "parse-srt-file"
path = "examples/parse-srt-file.rs"

[[example]]
name = "parse-srt-http"
path = "examples/parse-srt-http.rs"
required-features = ["http"]

[[example]]
name = "create-srt-file"
path = "examples/create-srt-file.rs"

[[example]]
name = "parse-srt-content"
path = "examples/parse-srt-content.rs"

[[example]]
name = "parse-vtt-file"
path = "examples/parse-vtt-file.rs"

[[example]]
name = "parse-vtt-http"
path = "examples/parse-vtt-http.rs"
required-features = ["http"]

[[example]]
name = "parse-vtt-content"
path = "examples/parse-vtt-content.rs"

[[example]]
name = "create-vtt-file"
path = "examples/create-vtt-file.rs"

[[example]]
name = "parse-ass-content"
path = "examples/parse-ass-content.rs"

[[example]]
name = "format-convert"
path = "examples/format-convert.rs"

[[example]]
name = "utility-ops"
path = "examples/utility-ops.rs"

[[example]]
name = "frame-conversion"
path = "examples/frame-conversion.rs"

[[bench]]
name = "subtitler_benchmark"
harness = false
