[package]
authors = [
  "siwilizhao <siwilizhao@gmail.com>",
] 
categories = [
  "text-processing",
  "multimedia",
  "parser-implementations",
] 
description = "Parse, convert, validate, edit, and generate subtitles in 9 formats (SRT, VTT, ASS/SSA, MicroDVD, SubViewer, TTML, SBV, LRC). Full CLI included." 
documentation = "https://docs.rs/subtitler" 
edition = "2024" 
keywords = [
  "subtitle",
  "srt",
  "vtt",
  "ass",
  "parser",
] 
license = "Apache-2.0" 
name = "subtitler" 
publish = true
readme = "README.md" 
repository = "https://github.com/subtitle-rs/subtitler" 
rust-version = "1.85"
version = "1.0.0" 

include = [
  "Cargo.toml",
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
  "MIGRATION.md",
  "src/**/*",
  "examples/**/*",
  "tests/**/*",
  "benches/**/*",
]

[dependencies]
encoding_rs = "0.8"
anyhow = "1"
chardetng = "1"
clap = {version = "4", features = ["derive"]}
quick-xml = {version = "0.41", optional = true}
regex = "1"
reqwest = {version = "0.13", optional = true, default-features = false, features = ["rustls"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
smallvec = {version = "1", features = ["write", "const_new", "serde"]}
thiserror = "2"
tokio = {version = "1", features = ["fs", "io-util", "rt", "macros"]}
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.8"
proptest = "1.5"

[features]
default = ["srt", "vtt", "ass", "ssa", "microdvd", "subviewer", "ttml", "sbv", "lrc", "http"]

srt = []
vtt = []
ass = []
ssa = []
microdvd = []
subviewer = []
ttml = ["quick-xml"]
sbv = []
lrc = []
http = ["reqwest"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[example]]
name = "parse-srt-file"
path = "examples/parse-srt-file.rs"

[[example]]
name = "parse-srt-http"
path = "examples/parse-srt-http.rs"
required-features = ["http"]

[[example]]
name = "create-srt-file"
path = "examples/create-srt-file.rs"

[[example]]
name = "parse-srt-content"
path = "examples/parse-srt-content.rs"

[[example]]
name = "parse-vtt-file"
path = "examples/parse-vtt-file.rs"

[[example]]
name = "parse-vtt-http"
path = "examples/parse-vtt-http.rs"
required-features = ["http"]

[[example]]
name = "parse-vtt-content"
path = "examples/parse-vtt-content.rs"

[[example]]
name = "create-vtt-file"
path = "examples/create-vtt-file.rs"

[[example]]
name = "parse-ass-content"
path = "examples/parse-ass-content.rs"

[[example]]
name = "format-convert"
path = "examples/format-convert.rs"

[[example]]
name = "frame-conversion"
path = "examples/frame-conversion.rs"

[[example]]
name = "stream-parse"
path = "examples/stream-parse.rs"

[[example]]
name = "quality-report"
path = "examples/quality-report.rs"

[[example]]
name = "normalize-text"
path = "examples/normalize-text.rs"

[[example]]
name = "convert-all-formats"
path = "examples/format-convert-all.rs"

[[example]]
name = "edit-operations"
path = "examples/edit-operations.rs"

[[example]]
name = "parse-ttml-lrc"
path = "examples/ttml-lyrics-tutorial.rs"

[[example]]
name = "detect-and-validate"
path = "examples/validate-subtitle.rs"

[[example]]
name = "batch-process"
path = "examples/translate-subtitle.rs"

[[bench]]
name = "subtitler_benchmark"
harness = false
