[package]
edition = "2021"
name = "parse-srt-file"
version = "0.0.1"

[dependencies]
anyhow = "^1.0"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
subtitler = {path = "../../"}
thiserror = "^2.0"
tokio = {version = "^1.42", features = ["full"]}
tracing = "^0.1"
tracing-subscriber = "^0.3"
